# vulnerabilities_lab

./: .gitignore  README.md
reflected_xss/: Makefile  README.md  docker-compose.yml  exploit_demo.py
reflected_xss/server/: app.py
reflected_xss/server/templates/: index.html
sql_injection/: Makefile  docker-compose.yml  exploit_demo.py  pyproject.toml
sql_injection/app/: package.json  server.js
sql_injection/app/views/: login.html
sql_injection/init-db/: init.sql
virtual_machines/: README.md
virtual_machines/debian/: Vagrantfile
virtual_machines/kali/: Vagrantfile
